--- a/MHW Randomizer/Controls/Quest.xaml
+++ b/MHW Randomizer/Controls/Quest.xaml
@@ -73,13 +73,13 @@
                                 <CheckBox Content="Include Arenas"
                                           IsChecked="{Binding IncludeArenaMap, Source={x:Static local:IoC.Settings}}"
                                           Margin="12, 4"
-                                          ToolTip="Includes all the arena maps in the pool of maps to randomly chose from &#xA;(includes arenas like Shara's and Fatalis') &#xA;(only one monster will be in the arena unless you have every quest a 2 monster quest checked then there will be 2)"
+                                          ToolTip="Includes all the arena maps in the pool of maps to randomly chose from &#xA;(includes arenas like Shara's and Fatalis') &#xA;(only the required monsters will be in the arena)"
                                           ToolTipService.ShowDuration="10000"
                                           IsEnabled="{Binding RandomMaps, Source={x:Static local:IoC.Settings}}"/>
                                 <CheckBox Content="All Monster In Arenas"
                                           IsChecked="{Binding AllMonstersInArena, Source={x:Static local:IoC.Settings}}"
                                           Margin="12, 4"
-                                          ToolTip="Includes the amount of monsters in the original quest instead of only one (can be chaotic)"
+                                          ToolTip="Includes the amount of monsters in the original quest instead of only the required monsters (can be chaotic)"
                                           ToolTipService.ShowDuration="10000"
                                           IsEnabled="{Binding RandomMaps, Source={x:Static local:IoC.Settings}}"/>
                                 <CheckBox Content="Random Quest Icons"
