--- a/MHW Randomizer/Controls/Monster.xaml
+++ b/MHW Randomizer/Controls/Monster.xaml
@@ -18,44 +18,47 @@
         <Border BorderBrush="Gray" 
                 BorderThickness="1"
                 Margin="5">
-            <StackPanel Orientation="Horizontal"
-                        Margin="0 5">
-                <StackPanel>
-                    <CheckBox Content="Include Small Monsters"
-                              IsChecked="{Binding IncludeSmallMonsterDebuffs, Source={x:Static local:IoC.Settings}}"
-                              Margin="5, 4"
-                              ToolTip="Includes small monster with getting the random attack status and element &#xA;(Still need to check those below)"
-                              ToolTipService.ShowDuration="10000"/>
-                    <CheckBox Content="Random Monster Status Effect"
-                              IsChecked="{Binding RandomMonsterAttackStatus, Source={x:Static local:IoC.Settings}}"
-                              Margin="5, 10, 5, 4"
-                              ToolTip="Gives the monsters a random status and chance to inflict the player with on some attacks (30% chance to add it to an attack) &#xA;(eg. bleed, paralysis, stun, etc (Some monster don't get a status))(Will keep stun value)"
-                              ToolTipService.ShowDuration="10000"/>
-                    <CheckBox Content="Different Status Effect Per Attack"
-                              IsChecked="{Binding EachAttackDifferentStatus, Source={x:Static local:IoC.Settings}}"
-                              Margin="12, 4"
-                              ToolTip="Each attack that gets chosen to have a status inflicted, will have the status randomly selected again"
-                              IsEnabled="{Binding RandomMonsterAttackStatus, Source={x:Static local:IoC.Settings}}"
-                              ToolTipService.ShowDuration="10000"/>
-                    <CheckBox Content="Multiple Statuses"
-                              IsChecked="{Binding MultipleStatusesPerAttack, Source={x:Static local:IoC.Settings}}"
-                              Margin="12, 4"
-                              ToolTip="Makes is so there is a chance to get between 1-5 statuses on a attack"
-                              IsEnabled="{Binding RandomMonsterAttackStatus, Source={x:Static local:IoC.Settings}}"
-                              ToolTipService.ShowDuration="10000"/>
-                </StackPanel>
-                <StackPanel Margin="40 30 0 0">
-                    <CheckBox Content="Random Monster Attack Element"
-                              IsChecked="{Binding RandomMonsterElement, Source={x:Static local:IoC.Settings}}"
-                              Margin="5, 4"
-                              ToolTip="Gives the monsters a random attack element for some of their attacks (30% chance to add it to an attack) &#xA;(Inflicts stuff like frostblight, and burn)(Also increases the monster's attack a bit)"
-                              ToolTipService.ShowDuration="10000"/>
-                    <CheckBox Content="Increase Element Damage"
-                              IsChecked="{Binding IncreaseElementPower, Source={x:Static local:IoC.Settings}}"
-                              Margin="12, 4"
-                              ToolTip="Increases the random power from 10-30 to 20-50 (Also increases the chance for blights and burn to be inflicted)"
-                              IsEnabled="{Binding RandomMonsterElement, Source={x:Static local:IoC.Settings}}"
-                              ToolTipService.ShowDuration="10000"/>
+            <StackPanel Margin="0 5">
+                <TextBlock Text="A bit buggy some will have 'phantom' element attacks, where sometimes they will have a 'aura' &#xA;around them with certain actions that will inflict damage and elements onto you"
+                           Margin="5"/>
+                <StackPanel Orientation="Horizontal">
+                    <StackPanel>
+                        <CheckBox Content="Include Small Monsters"
+                                  IsChecked="{Binding IncludeSmallMonsterDebuffs, Source={x:Static local:IoC.Settings}}"
+                                  Margin="5, 4"
+                                  ToolTip="Includes small monster with getting the random attack status and element &#xA;(Still need to check those below)"
+                                  ToolTipService.ShowDuration="10000"/>
+                        <CheckBox Content="Random Monster Status Effect"
+                                  IsChecked="{Binding RandomMonsterAttackStatus, Source={x:Static local:IoC.Settings}}"
+                                  Margin="5, 10, 5, 4"
+                                  ToolTip="Gives the monsters a random status and chance to inflict the player with on some attacks (30% chance to add it to an attack) &#xA;(eg. bleed, paralysis, stun, etc (Some monster don't get a status))(Will keep stun value)"
+                                  ToolTipService.ShowDuration="10000"/>
+                        <CheckBox Content="Different Status Effect Per Attack"
+                                  IsChecked="{Binding EachAttackDifferentStatus, Source={x:Static local:IoC.Settings}}"
+                                  Margin="12, 4"
+                                  ToolTip="Each attack that gets chosen to have a status inflicted, will have the status randomly selected again"
+                                  IsEnabled="{Binding RandomMonsterAttackStatus, Source={x:Static local:IoC.Settings}}"
+                                  ToolTipService.ShowDuration="10000"/>
+                        <CheckBox Content="Multiple Statuses"
+                                  IsChecked="{Binding MultipleStatusesPerAttack, Source={x:Static local:IoC.Settings}}"
+                                  Margin="12, 4"
+                                  ToolTip="Makes is so there is a chance to get between 1-5 statuses on a attack"
+                                  IsEnabled="{Binding RandomMonsterAttackStatus, Source={x:Static local:IoC.Settings}}"
+                                  ToolTipService.ShowDuration="10000"/>
+                    </StackPanel>
+                    <StackPanel Margin="40 30 0 0">
+                        <CheckBox Content="Random Monster Attack Element"
+                                  IsChecked="{Binding RandomMonsterElement, Source={x:Static local:IoC.Settings}}"
+                                  Margin="5, 4"
+                                  ToolTip="Gives the monsters a random attack element for some of their attacks (30% chance to add it to an attack) &#xA;(Inflicts stuff like frostblight, and burn)(Also increases the monster's attack a bit)"
+                                  ToolTipService.ShowDuration="10000"/>
+                        <CheckBox Content="Increase Element Damage"
+                                  IsChecked="{Binding IncreaseElementPower, Source={x:Static local:IoC.Settings}}"
+                                  Margin="12, 4"
+                                  ToolTip="Increases the random power from 10-30 to 20-50"
+                                  IsEnabled="{Binding RandomMonsterElement, Source={x:Static local:IoC.Settings}}"
+                                  ToolTipService.ShowDuration="10000"/>
+                    </StackPanel>
                 </StackPanel>
             </StackPanel>
         </Border>
