Add expedition monster randomization and placeholder settings

--- a/MHW Randomizer/Windows/MainWindow.xaml
+++ b/MHW Randomizer/Windows/MainWindow.xaml
@@ -68,6 +68,10 @@
                 <TabItem Header="Quests">
                     <local:Quest/>
                 </TabItem>
+
+                <TabItem Header="Expeditions">
+                    <local:Expedition/>
+                </TabItem>
                 
                 <TabItem Header="Monsters">
                     <local:Monster/>
