Add tweak to make starter kinsects faster

--- a/MHW Randomizer/Controls/Misc.xaml
+++ b/MHW Randomizer/Controls/Misc.xaml
@@ -6,8 +6,48 @@
              xmlns:local="clr-namespace:MHW_Randomizer"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="600">
-    <Grid>
-        <TextBlock Text="Misc"
+    <StackPanel>
+        <Grid>
+            <TextBlock Text="Misc"
+                       Margin="15 -4 0 0"
+                       Background="White"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Top"
+                       Panel.ZIndex="1"
+                       FontWeight="Bold"
+                       Height="16"/>
+            <Border BorderBrush="Gray"
+                    BorderThickness="1"
+                    Margin="5"
+                    Height="100"
+                    VerticalAlignment="Top">
+                <StackPanel Orientation="Horizontal"
+                            Margin="0 5">
+                    <StackPanel>
+                        <CheckBox Content="Random Scoutfly Colour"
+                                  IsChecked="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"
+                                  Margin="5 4"
+                                  ToolTip="Randomizes the scoutfly colour for when tracking a monster, and the monster trace colours with a colour from a list I made &#x0a;(Different colours for normal monster, elder dragon, and tempered)"
+                                  ToolTipService.ShowDuration="10000"/>
+                        <CheckBox Content="Completely Random Scoutfly Colour"
+                                  IsChecked="{Binding CompletelyRandomScoutflyColour, Source={x:Static local:IoC.Settings}}"
+                                  Margin="12 4"
+                                  ToolTip="Make it so the colours aren't picked from the colour list and are completely random"
+                                  ToolTipService.ShowDuration="10000"
+                                  IsEnabled="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"/>
+                        <CheckBox Content="Different Track Colour"
+                                  IsChecked="{Binding DifferentTrackScoutflyColour, Source={x:Static local:IoC.Settings}}"
+                                  Margin="12 4"
+                                  ToolTip="Makes the track colour for monsters different from the scoutfly colour, instead of it being the same as the scoutfly's random colour"
+                                  ToolTipService.ShowDuration="10000"
+                                  IsEnabled="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"/>
+                    </StackPanel>
+                </StackPanel>
+            </Border>
+        </Grid>
+        
+        <Grid>
+            <TextBlock Text="Tweaks"
                    Margin="15 -4 0 0"
                    Background="White"
                    HorizontalAlignment="Left"
@@ -15,33 +55,21 @@
                    Panel.ZIndex="1"
                    FontWeight="Bold"
                    Height="16"/>
-        <Border BorderBrush="Gray"
+            <Border BorderBrush="Gray"
                 BorderThickness="1"
                 Margin="5"
-                Height="100"
                 VerticalAlignment="Top">
-            <StackPanel Orientation="Horizontal"
+                <StackPanel Orientation="Horizontal"
                         Margin="0 5">
-                <StackPanel>
-                    <CheckBox Content="Random Scoutfly Colour"
-                              IsChecked="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"
+                    <StackPanel>
+                        <CheckBox Content="Faster Starter Kinsects"
+                              IsChecked="{Binding FasterKinsects, Source={x:Static local:IoC.Settings}}"
                               Margin="5 4"
-                              ToolTip="Randomizes the scoutfly colour for when tracking a monster, and the monster trace colours with a colour from a list I made &#x0a;(Different colours for normal monster, elder dragon, and tempered)"
+                              ToolTip="Sets kinsects to have a speed of atleast 3 to make them a bit more bearable to start with"
                               ToolTipService.ShowDuration="10000"/>
-                    <CheckBox Content="Completely Random Scoutfly Colour"
-                              IsChecked="{Binding CompletelyRandomScoutflyColour, Source={x:Static local:IoC.Settings}}"
-                              Margin="12 4"
-                              ToolTip="Make it so the colours aren't picked from the colour list and are completely random"
-                              ToolTipService.ShowDuration="10000"
-                              IsEnabled="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"/>
-                    <CheckBox Content="Different Track Colour"
-                              IsChecked="{Binding DifferentTrackScoutflyColour, Source={x:Static local:IoC.Settings}}"
-                              Margin="12 4"
-                              ToolTip="Makes the track colour for monsters different from the scoutfly colour, instead of it being the same as the scoutfly's random colour"
-                              ToolTipService.ShowDuration="10000"
-                              IsEnabled="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"/>
+                    </StackPanel>
                 </StackPanel>
-            </StackPanel>
-        </Border>
-    </Grid>
+            </Border>
+        </Grid>
+    </StackPanel>
 </UserControl>
