--- a/MHW Randomizer/Controls/Quest.xaml
+++ b/MHW Randomizer/Controls/Quest.xaml
@@ -114,7 +114,7 @@
                                 <CheckBox Content="Random Supply Box Items"
                                           IsChecked="{Binding RandomSupplyBoxItems, Source={x:Static local:IoC.Settings}}"
                                           Margin="5, 4"
-                                          ToolTip="Randomizes the items in supply boxes (Only includes supply items)"/>
+                                          ToolTip="Randomizes the items and the amount of each item in supply boxes (Only includes supply items, and each item has a limit to the amount)"/>
                             </StackPanel>
                             <StackPanel Margin="13 -4 0 0"
                                         VerticalAlignment="Center"
@@ -130,7 +130,7 @@
                                          IsKeyboardFocusedChanged="TBSupply_IsKeyboardFocusedChanged"
                                          KeyDown="EnterKeyRemoveFocus"
                                          x:Name="TBSupply"
-                                         ToolTip="How many extra supply boxes to create &#xA;(0 will only randomize the items in exisiting supply boxes and create no extra)&#xA;(Picks a random amount of items between 3-5, and random count of each item between 1-30)"
+                                         ToolTip="How many extra supply boxes to create &#xA;(0 will only randomize the items in exisiting supply boxes and create no extra)&#xA;(Picks a random amount of items between 3-5, and random count for each item between 1 and their max amount)"
                                          ToolTipService.ShowDuration="10000"/>
                             </StackPanel>
                         </StackPanel>
